{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 916,
  "lineage": "d74c3945-06b0-ca0d-9f40-908f9c011dfb",
  "resources": [
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "multimodal-lib-prod-alb-logs-50fcb7c1",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:591222106065:loadbalancer/app/multimodal-lib-prod-alb/14a18ebae5be6c55",
            "arn_suffix": "app/multimodal-lib-prod-alb/14a18ebae5be6c55",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "multimodal-lib-prod-alb-1465193604.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:591222106065:loadbalancer/app/multimodal-lib-prod-alb/14a18ebae5be6c55",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "multimodal-lib-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b01cf4957cb2be65"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f4d9ecb751beb27"
              },
              {
                "subnet_id": "subnet-02fe694f061238d5a"
              },
              {
                "subnet_id": "subnet-0c352188f5398a718"
              }
            ],
            "subnets": [
              "subnet-02f4d9ecb751beb27",
              "subnet-02fe694f061238d5a",
              "subnet-0c352188f5398a718"
            ],
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "vpc_id": "vpc-0b2186b38779e77f6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.application.aws_s3_bucket.alb_logs",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "random_id.bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-0b01cf4957cb2be65",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b01cf4957cb2be65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "multimodal-lib-prod-alb-20260122081027951900000009",
            "name_prefix": "multimodal-lib-prod-alb-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-alb-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "alb"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-alb-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "3e521836",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-0e6a2f7b3d0a23a61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6a2f7b3d0a23a61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "multimodal-lib-prod-alb-20260108014417120500000008",
            "name_prefix": "multimodal-lib-prod-alb-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-alb-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "alb"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-alb-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-09b4846c0a660311b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b4846c0a660311b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b01cf4957cb2be65"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "multimodal-lib-prod-ecs-2026012208103081910000000a",
            "name_prefix": "multimodal-lib-prod-ecs-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-ecs-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "ecs"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-ecs-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "be22f7f7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-08ce8eacc94169e0a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ce8eacc94169e0a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6a2f7b3d0a23a61"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "multimodal-lib-prod-ecs-20260108014420347500000009",
            "name_prefix": "multimodal-lib-prod-ecs-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-ecs-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "ecs"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-ecs-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "e31dfbbd",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-0393d472e770ed1a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0393d472e770ed1a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow traffic from NLB (VPC CIDR)",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0135b368e20b7bd01"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ml-librarian-prod-ecs-20260115041226078800000002",
            "name_prefix": "ml-librarian-prod-ecs-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ml-librarian-prod-ecs-sg",
              "Owner": "platform-team",
              "Project": "ml-librarian",
              "Type": "ecs"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "ml-librarian-prod-ecs-sg",
              "Owner": "platform-team",
              "Project": "ml-librarian",
              "Type": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-012e02ed219b41ecb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012e02ed219b41ecb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from ECS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b4846c0a660311b"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "multimodal-lib-prod-efs-2026012208103400830000000b",
            "name_prefix": "multimodal-lib-prod-efs-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-efs-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "storage"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-efs-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "storage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-002f77387fe6859e3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002f77387fe6859e3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b4846c0a660311b"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "multimodal-lib-prod-elasticache-2026010801442335240000000a",
            "name_prefix": "multimodal-lib-prod-elasticache-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-elasticache-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "cache"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-elasticache-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "cache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "neptune",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-0231498cba0c6b983",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0231498cba0c6b983",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Neptune from ECS",
                "from_port": 8182,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b4846c0a660311b"
                ],
                "self": false,
                "to_port": 8182
              }
            ],
            "name": "multimodal-lib-prod-neptune-2026010801442335240000000c",
            "name_prefix": "multimodal-lib-prod-neptune-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-neptune-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "database"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-neptune-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:security-group/sg-0cee28bdb3ec57732",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cee28bdb3ec57732",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from ECS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b4846c0a660311b"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "multimodal-lib-prod-opensearch-2026010801442335240000000b",
            "name_prefix": "multimodal-lib-prod-opensearch-",
            "owner_id": "591222106065",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-opensearch-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "database"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-opensearch-sg",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f711f00a7ef435a4",
            "arn": "arn:aws:ec2:us-east-1:591222106065:elastic-ip/eipalloc-0f711f00a7ef435a4",
            "association_id": "eipassoc-01532dc30ef4bc548",
            "domain": "vpc",
            "id": "eipalloc-0f711f00a7ef435a4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e8b0c9c27cc4c798",
            "private_dns": "ip-10-0-1-87.ec2.internal",
            "private_ip": "10.0.1.87",
            "public_dns": "ec2-3-233-193-206.compute-1.amazonaws.com",
            "public_ip": "3.233.193.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-nat-eip",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-nat-eip",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:internet-gateway/igw-07ccfaa3229a312e1",
            "id": "igw-07ccfaa3229a312e1",
            "owner_id": "591222106065",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-igw",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-igw",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f711f00a7ef435a4",
            "association_id": "eipassoc-01532dc30ef4bc548",
            "connectivity_type": "public",
            "id": "nat-057025a3296d82cb2",
            "network_interface_id": "eni-0e8b0c9c27cc4c798",
            "private_ip": "10.0.1.87",
            "public_ip": "3.233.193.206",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c352188f5398a718",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-nat-gateway",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-nat-gateway",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:network-acl/acl-08fa81899d86dca95",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08fa81899d86dca95",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "591222106065",
            "subnet_ids": [],
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-nacl",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-nacl",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:route-table/rtb-0edcf8e68de300574",
            "id": "rtb-0edcf8e68de300574",
            "owner_id": "591222106065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057025a3296d82cb2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-rt-1",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-rt-1",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:route-table/rtb-0f735608e77b8da54",
            "id": "rtb-0f735608e77b8da54",
            "owner_id": "591222106065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057025a3296d82cb2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-rt-2",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-rt-2",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:route-table/rtb-08015017be3a8021a",
            "id": "rtb-08015017be3a8021a",
            "owner_id": "591222106065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057025a3296d82cb2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-rt-3",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-rt-3",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:route-table/rtb-0f20f8bf26d9cb671",
            "id": "rtb-0f20f8bf26d9cb671",
            "owner_id": "591222106065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ccfaa3229a312e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-public-rt",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-public-rt",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1acce5fe823132c",
            "route_table_id": "rtb-0edcf8e68de300574",
            "subnet_id": "subnet-02a84a72425ffa550"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0297439cadfb425d7",
            "route_table_id": "rtb-0f735608e77b8da54",
            "subnet_id": "subnet-0379e49e44be48905"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061984e38f837f94a",
            "route_table_id": "rtb-08015017be3a8021a",
            "subnet_id": "subnet-068219ec235688a19"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4117ed63182464d",
            "route_table_id": "rtb-0f20f8bf26d9cb671",
            "subnet_id": "subnet-0c352188f5398a718"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057810fe7d601733e",
            "route_table_id": "rtb-0f20f8bf26d9cb671",
            "subnet_id": "subnet-02f4d9ecb751beb27"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cad4eac3fc6e93b8",
            "route_table_id": "rtb-0f20f8bf26d9cb671",
            "subnet_id": "subnet-02fe694f061238d5a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:subnet/subnet-02a84a72425ffa550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a84a72425ffa550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591222106065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-subnet-1",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-subnet-1",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "private"
            },
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:subnet/subnet-0379e49e44be48905",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0379e49e44be48905",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591222106065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-subnet-2",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-subnet-2",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "private"
            },
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:subnet/subnet-068219ec235688a19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068219ec235688a19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591222106065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-subnet-3",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-private-subnet-3",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "private"
            },
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:subnet/subnet-0c352188f5398a718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c352188f5398a718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591222106065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-public-subnet-1",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-public-subnet-1",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "public"
            },
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:subnet/subnet-02f4d9ecb751beb27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f4d9ecb751beb27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591222106065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-public-subnet-2",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-public-subnet-2",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "public"
            },
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:subnet/subnet-02fe694f061238d5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fe694f061238d5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591222106065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-public-subnet-3",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-public-subnet-3",
              "Owner": "platform-team",
              "Project": "multimodal-lib",
              "Type": "public"
            },
            "vpc_id": "vpc-0b2186b38779e77f6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591222106065:vpc/vpc-0b2186b38779e77f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00169acf1849846ce",
            "default_route_table_id": "rtb-076be301291d22519",
            "default_security_group_id": "sg-07ddf848ba88df531",
            "dhcp_options_id": "dopt-65eadc1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2186b38779e77f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076be301291d22519",
            "owner_id": "591222106065",
            "tags": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-vpc",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            },
            "tags_all": {
              "CostCenter": "engineering",
              "CreatedBy": "aws-production-deployment-spec",
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "multimodal-lib-prod-vpc",
              "Owner": "platform-team",
              "Project": "multimodal-lib"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}